--- a/index.html
+++ b/index.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="ar">
 <head>
+  <meta charset="UTF-8">
   <title>Progress</title>
+  <style>
+    .progress-container {
+      width: 100%;
+      background: #eee;
+      border-radius: 20px;
+      margin: 50px auto;
+      height: 30px;
+    }
+    .progress-bar {
+      height: 100%;
+      width: 10%; /* هنا النسبة */
+      background: linear-gradient(to right, green, blue);
+      border-radius: 20px;
+      text-align: center;
+      color: white;
+      font-weight: bold;
+      line-height: 30px;
+    }
+  </style>
 </head>
 <body>
-  <h1>هلا بيك 🌟</h1>
-  <p>هذا الموقع يشتغل من GitHub Pages!</p>
+  <div class="progress-container">
+    <div class="progress-bar">10%</div>
+  </div>
 </body>
 </html>
