--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     }
     .progress-bar {
       height: 100%;
-      width: 10%; /* هنا النسبة */
+      width: 0%; /* هنا تتحكم بالنسبة */
       background: linear-gradient(to right, green, blue);
       border-radius: 20px;
       text-align: center;
@@ -24,8 +24,9 @@
   </style>
 </head>
 <body>
+  <h1>🌟 نسبة التقدم 🌟</h1>
   <div class="progress-container">
-    <div class="progress-bar">10%</div>
+    <div class="progress-bar">0%</div>
   </div>
 </body>
 </html>
