--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Progress</title>
   <style>
     .progress-container {
-      width: 100%;
+      width: 80%;
       background: #eee;
       border-radius: 20px;
       margin: 50px auto;
@@ -13,7 +13,7 @@
     }
     .progress-bar {
       height: 100%;
-      width: 20%; /* هنا تتحكم بالنسبة */
+      width: 40%; /* هنا النسبة */
       background: linear-gradient(to right, green, blue);
       border-radius: 20px;
       text-align: center;
@@ -24,9 +24,8 @@
   </style>
 </head>
 <body>
-  <h1></h1> نسبه الاسماء 🌟</h1>
   <div class="progress-container">
-    <div class="progress-bar">20%</div>
+    <div class="progress-bar">40%</div>
   </div>
 </body>
 </html>
