--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     }
     .progress-bar {
       height: 100%;
-      width:30%; /* هنا النسبة */
+      width:50%; /* هنا النسبة */
+       width:30%; 
       background: linear-gradient(to right, green, blue);
       border-radius: 20px;
       text-align: center;
@@ -26,6 +27,7 @@
 <body>
   <h1>🌟 نسبه الاكمال الاسماء🌟</h1
   <div class="progress-container">
+    <div class="progress-bar">50%</div>
     <div class="progress-bar">30%</div>
   </div>
 </body>
