--- a/index.html
+++ b/index.html
@@ -3,32 +3,48 @@
 <head>
   <meta charset="UTF-8">
   <title>Progress</title>
+
+  <!-- وسوم منع التخزين -->
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
+
   <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f5f5f5;
+      padding: 20px;
+      direction: rtl;
+      text-align: center;
+    }
+
     .progress-container {
-      width: 100%;
+      width: 80%;
       background: #eee;
       border-radius: 20px;
-      margin: 50px auto;
+      margin: 20px auto;
       height: 30px;
+      overflow: hidden;
+      box-shadow: 0 0 5px #aaa;
     }
+
     .progress-bar {
       height: 100%;
-      width:50%; /* هنا النسبة */
-       width:30%; 
+      width: 40%; /* ← هنا غيّر الرقم للنسبة */
       background: linear-gradient(to right, green, blue);
       border-radius: 20px;
       text-align: center;
       color: white;
       font-weight: bold;
       line-height: 30px;
+      transition: width 0.5s ease;
     }
   </style>
 </head>
 <body>
-  <h1>🌟 نسبه الاكمال الاسماء🌟</h1
+  <h1>🌟 نسبة التقدم 🌟</h1>
   <div class="progress-container">
-    <div class="progress-bar">50%</div>
-    <div class="progress-bar">30%</div>
+    <div class="progress-bar">40%</div>
   </div>
 </body>
 </html>
