--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
 
     .progress-bar {
       height: 100%;
-      width: 40%; /* ← هنا غيّر الرقم للنسبة */
+      width: 30%; /* ← هنا غيّر الرقم للنسبة */
+
+      width: 30%;
+
+      width: 30%;
       background: linear-gradient(to right, green, blue);
       border-radius: 20px;
       text-align: center;
@@ -42,9 +46,9 @@
   </style>
 </head>
 <body>
-  <h1>🌟 نسبة التقدم 🌟</h1>
+  <h1>🌟نسبة الاسماء 🌟</h1>
   <div class="progress-container">
-    <div class="progress-bar">40%</div>
+    <div class="progress-bar">30%</div>
   </div>
 </body>
 </html>
