--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 
     .progress-bar {
       height: 100%;
-      width: 30%; /* ← هنا غيّر الرقم للنسبة */
+      width: 20%; /* ← هنا غيّر الرقم للنسبة */
 
       width: 30%;
 
-      width: 30%;
+      width: 50%;
       background: linear-gradient(to right, green, blue);
       border-radius: 20px;
       text-align: center;
@@ -48,7 +48,11 @@
 <body>
   <h1>🌟نسبة الاسماء 🌟</h1>
   <div class="progress-container">
+    <div class="progress-bar">20%</div>
+
     <div class="progress-bar">30%</div>
+
+    <div class="progress-bar">50%</div>
   </div>
 </body>
 </html>
