--- a/index.html
+++ b/index.html
@@ -3,56 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <title>Progress</title>
-
-  <!-- وسوم منع التخزين -->
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-  <meta http-equiv="Pragma" content="no-cache" />
-  <meta http-equiv="Expires" content="0" />
-
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f5f5f5;
-      padding: 20px;
-      direction: rtl;
-      text-align: center;
-    }
-
     .progress-container {
       width: 80%;
-      background: #eee;
+      background: #ff0000ff;
       border-radius: 20px;
-      margin: 20px auto;
+      margin: 50px auto;
       height: 30px;
-      overflow: hidden;
-      box-shadow: 0 0 5px #aaa;
     }
-
     .progress-bar {
       height: 100%;
-      width: 100%; /* ← هنا غيّر الرقم للنسبة */
-
-      width: 3%;
-
-      width: 50%;
+      width: 40%; /* هنا تتحكم بالنسبة */
+      width: 40%محمد;
+      width: 40%قاسم;
+      width: 40%;
       background: linear-gradient(to right, green, blue);
       border-radius: 20px;
       text-align: center;
       color: white;
       font-weight: bold;
       line-height: 30px;
-      transition: width 0.5s ease;
     }
   </style>
 </head>
 <body>
-  <h1>🌟نسبة الاسماء 🌟</h1>
+  <h1>🌟 نسبة نقوصات يتم ارجاع نسبه عاليه 🌟</h1>
+   <h2>🌟 يتم ارجاع رجعا يتم ارجاع🌟</h2>
   <div class="progress-container">
-    <div class="progress-bar">100%</div>
-
-    <div class="progress-bar">30%</div>
-
-    <div class="progress-bar">50%</div>
+    <div class="progress-bar">40%</div>
+    <div class="progress-bar">محمد40%</div>
+    <div class="progress-bar">40%قاسم</div>
+    <div class="progress-bar">40%</div>
   </div>
 </body>
 </html>
