--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-
+<!DOCTYPE html>
+<html lang="ar">
+<head>
+  <meta charset="UTF-8">
+  <title>Progress</title>
+  <style>
+    .progress-container {
     .progress-bar {
       height: 100%;
       width: 40%; /* هنا تتحكم بالنسبة */
